<resources>
    <string name="app_name">PetHood</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="dog_name">Dog Name</string>
    <string name="email_owner">Email Owner</string>
    <string name="breed">Breed</string>
    <string name="small">Small</string>
    <string name="size">Size</string>
    <string name="medium">Medium</string>
    <string name="big">Big</string>
    <string name="mate">Mate</string>
    <string name="yes">Yes</string>
    <string name="register">Register</string>
    <string name="age">Age</string>
    <string name="color">Color</string>
    <string name="no">No</string>
    <string name="login">Login</string>
    <string name="registerText">Don\'t have an account ? Register !</string>
    <string name="test_gmail_com">test@gmail.com</string>
    <string name="join">Join</string>
    <string name="logoutMenu">Logout</string>
    <string name="see_dog_profile">See Dog Profile</string>
    <string name="back">Back</string>
    <string name="see_map">Map</string>
    <string name="my_dog">My Dog</string>
    <string name="report_missing_dog">Report Missing Dog</string>
    <string name="chat">Chat</string>
    <string name="type_mssg">Type a message ...</string>
    <string name="hi">hello</string>
    <string name="report_missing_dogs">Report Missing Dog</string>
    <string name="userEmailReport">User</string>
    <string name="filters">Filters</string>
    <string name="search_breed_text">Search by Breed</string>
    <string name="search">Search</string>
    <string name="searcy_by_size">Searcy By Size</string>
    <string name="search_by_mating">Search by Mating</string>
    <string name="mating_dogs">Mating dogs</string>
    <string name="not_mating_dogs">Not mating dogs</string>
    <string name="breed_search">Breed</string>
    <string name="apply_filters">Apply Filters!</string>
    <string name="refresh">Refresh</string>
    <string name="interval_summary">How frequently should data refresh?</string>
    <string name="interval_title">Refresh interval</string>
    <string name="refresh_interval">Refresh Interval</string>
    <string name="edit_doggo">Edit dog</string>
    <string name="send_mail">Send mail</string>
    <string name="please_enter_mail">Please enter mail</string>
    <string name="dufyp">Did you forget your password?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone_nr">Phone number</string>
    <string name="add_picture">Add Picture</string>
    <string name="tap_to_add_photo">Tap to on the camera to add photo</string>
    <string name="upload">Upload</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="abandoned_dog_alert">Abandoned Dog Alert</string>
    <string name="edit">Edit</string>
    <string name="ent_new_value">Enter new value</string>
    <string name="update">Update</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_breed">Edit Breed</string>
    <string name="edit_age">Edit Age</string>
    <string name="edit_color">Edit Color</string>
    <string name="edit_size">Edit Size</string>
    <string name="edit_mate">Edit Mating</string>
    <string name="my_profile">My Profile</string>
    <string name="see_owner">See Owner</string>
    <string name="edit_surname">Edit Surname</string>
    <string name="edit_phone">Edit Phone</string>
    <string name="please_click_informations_to_update">Please click informations to update!</string>
    <string name="edit_mating_y_n">Edit Mating (Y/N)</string>
    <string name="us_mail">User\'s mail</string>
    <string name="user_s_message">User\'s message</string>
    <string name="alert">ALERT</string>
    <string name="apply_refresh">Apply</string>
    <string name="refresh_button">refresh_button</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="recent_chatss">Recent Chats</string>

</resources>
