<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/itemServiceStart"
        android:icon="@drawable/ic_autorenew_black_24dp"
        android:title="@string/refresh" />

    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/see_map" />
    <item
        android:id="@+id/action_recentChats"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/recent_chatss" />
    <item
        android:id="@+id/userDetails"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/my_profile" />

    <item
        android:id="@+id/dogDetails"
        android:icon="@drawable/ic_pets_black_24dp"
        android:title="@string/my_dog" />


    <item
        android:id="@+id/reportMissingDog"
        android:icon="@drawable/ic_announcement_black_24dp"
        android:title="@string/report_missing_dog" />

    <item
        android:id="@+id/editInterval"
        android:icon="@drawable/ic_timer_black_24dp"
        android:title="@string/refresh_interval" />


    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_power_settings_new_black_24dp"
        android:title="@string/logoutMenu" />
</menu>