<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/dogNameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:hint="@string/dog_name"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/dogOwnerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/email_owner"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dogBreedView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/breed"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/dogAgeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/age"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/dogColorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/color"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dogSizeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/size"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/dogMateView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/mate"
        android:textSize="18sp" />


</LinearLayout>