<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
    android:id="@+id/tapToAddPhotoText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="0dp"
    android:layout_marginTop="18dp"
    android:text="@string/tap_to_add_photo"
    android:textAlignment="center"
    android:textSize="18sp" />


    <ImageView
        android:id="@+id/imageViewCamera"
        android:layout_width="131dp"
        android:layout_height="108dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/icon_camera" />
</LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/dogNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:hint="@string/dog_name"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/dogOwnerEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/email_owner"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/dogBreedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/breed"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/dogAgeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/age"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/dogColorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/color"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/dogSizeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/size"
            tools:ignore="TextFields" />

        <CheckBox
            android:id="@+id/dogSizeSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/small" />

        <CheckBox
            android:id="@+id/dogSizeMedium"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/medium" />

        <CheckBox
            android:id="@+id/dogSizeBig"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/big" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/matingText"
            android:layout_width="288dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/mate"
            tools:ignore="TextFields" />

        <Switch
            android:id="@+id/matingSwitch"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textOff="@string/no"
            android:textOn="@string/yes" />

    </LinearLayout>


    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="0dp"
        android:background="#9b6191"
        android:text="@string/register"
        android:textColor="#FFFF" />


</LinearLayout>