<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/ownerNameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:hint="@string/dog_name"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/ownerSurnameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/email_owner"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/ownerPhoneView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/breed"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/ownerEmailView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/age"
        android:textSize="18sp" />


</LinearLayout>