<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9b6191"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/searchSizeText"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/searcy_by_size"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/dogSizeSmallSearch"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/small" />

            <CheckBox
                android:id="@+id/dogSizeMediumSearch"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/medium" />

            <CheckBox
                android:id="@+id/dogSizeBigSearch"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/big" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/searchMateText"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:text="@string/search_by_mating"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/yesMating"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/mating_dogs" />

            <CheckBox
                android:id="@+id/noMating"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/not_mating_dogs" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/searchBreedText"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:text="@string/search_breed_text"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">


            <EditText
                android:id="@+id/searchBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="7dp"
                android:layout_toStartOf="@+id/img_ButtonSearch"
                android:hint="@string/search" />


            <ImageButton
                android:id="@+id/img_ButtonSearch"
                android:layout_width="52dp"
                android:layout_height="49dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/searchimg"
                tools:ignore="RtlHardcoded" />


        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/resultList"
            android:layout_width="match_parent"
            android:layout_height="313dp">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <Button
        android:id="@+id/buttonApplyFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:text="@string/apply_filters" />
</LinearLayout>