<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_name"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/newValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ent_new_value" />

    <TextView
        android:id="@+id/textViewEdit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_surname"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/newValue2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ent_new_value" />

    <TextView
        android:id="@+id/textViewEdit3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_phone"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/newValue3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ent_new_value" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9b6191"
        android:text="@string/update"
        android:textColor="#FFFF" />

</LinearLayout>